<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".SignupActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:layout_margin="10sp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/sign_up_here"
        android:textColor="@color/logoGreen"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_your_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_your_phone_number"
            android:inputType="phone"
            android:minHeight="48dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/etID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_your_id_number"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_your_email_address"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/etRepass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/confirm_your_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            tools:ignore="VisualLintButtonSize" />

        <TextView
            android:id="@+id/tvMoveLogin"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/already_have_an_account_login"
            android:textColor="@color/logoRed"
            android:textSize="15sp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>
</LinearLayout>